--- a/scss/style.scss
+++ b/scss/style.scss
@@ -252,7 +252,7 @@ section .container {
     text-align: center;
 }
 
-.clicks {
+.clicks2 {
     font-family: $font;
     font-size: 15px;
     background: $color2;
